--- a/style.css
+++ b/style.css
@@ -1,3 +1,23 @@
+* {
+  font-family: Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
+
+h1 {
+  text-align: center;
+  font-size: 2.5em;
+
+}
+
+h1, h2, h3 {
+  color: navy;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  
+}
+
+#header {
+  background-image: linear-gradient(to right, red , yellow);
+}
+
 #yt-icon {
   max-width: 100px;
   float: right;
