--- a/style.css
+++ b/style.css
@@ -1,21 +1,23 @@
 * {
-  font-family: Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-family: Haettenschweiler, "Arial Narrow Bold", sans-serif;
 }
 
 h1 {
   text-align: center;
   font-size: 2.5em;
-
 }
 
-h1, h2, h3 {
+h1,
+h2,
+h3 {
   color: navy;
-  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-  
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
 }
 
 #header {
-  background-image: linear-gradient(to right, red , yellow);
+  background-image: linear-gradient(to top right, #03001e, #7303c0, #ec38bc, #fdeff9);
+  padding: 50px 0px;
+  margin: 0px;
 }
 
 #yt-icon {
